--- a/disruptification.html
+++ b/disruptification.html
@@ -287,15 +287,15 @@
         <div class="newsletter-section">
             <div class="newsletter-cta">
                 <div class="newsletter-content">
-                    <h2>Stay Updated</h2>
-                    <p>Sign up to receive updates on the book's availability and free sample chapters when they're ready.</p>
+                    <h2>Read the First 3 Chapters Free</h2>
+                    <p>Want to see how Linus starts disrupting the world (and immediately screwing it up)? Sign up to get the first three chapters plus updates on teh book's release.</p>
                     
                     <form class="newsletter-form" action="https://buttondown.email/api/emails/embed-subscribe/sblaszak" method="POST" target="_blank">
                         <input type="email" name="email" placeholder="Email" required>
-                        <button type="submit">Get Updates</button>
+                        <button type="submit">Get The Free Chapters</button>
                     </form>
                     
-                    <p class="privacy-note">No spam. Unsubscribe anytime. We're not evil like Linus' startups.</p>
+                    <p class="privacy-note">No spam. Unsubscribe anytime. Minimal enshittification of your daily life we promise.</p>
                 </div>
             </div>
         </div>
