--- a/disruptification.html
+++ b/disruptification.html
@@ -288,7 +288,7 @@
             <div class="newsletter-cta">
                 <div class="newsletter-content">
                     <h2>Read the First 3 Chapters Free</h2>
-                    <p>Want to see how Linus starts disrupting the world (and immediately screwing it up)? Sign up to get the first three chapters plus updates on teh book's release.</p>
+                    <p>Want to see how Linus starts disrupting the world (and immediately screwing it up)? Sign up to get the first three chapters plus updates on the book's release.</p>
                     
                     <form class="newsletter-form" action="https://buttondown.email/api/emails/embed-subscribe/sblaszak" method="POST" target="_blank">
                         <input type="email" name="email" placeholder="Email" required>
